BUG#35190 - Can't upgrade MySQL 6 without mysqldump first

Falcon silently succeedes to open incompatible data files
(e.g. created by different version) on server start.

With this fix falcon refuses to start if it mets incompatible
data files.